--- a/css/custom.css
+++ b/css/custom.css
@@ -121,6 +121,9 @@
 	padding: 0;
 	box-sizing: content-box;
 }
+.__bookmark-content-textarea {
+	min-height: 45px;
+}
 .__note-item-buttons {
     opacity: 0;
     display: flex;
